# lotus

./: .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix  knip.json  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
.agent/rules/: code-style-guide.md  reed.md  viwoscript.md
.github/workflows/: ci.yml
apps/: README.md
apps/admin-cli/: README.md  package.json
apps/cli/: README.md  package.json
apps/cli/src/: parser.test.ts  parser.ts
apps/discord-bot/: README.md  package.json
apps/discord-bot/src/: bot.ts  config.ts  db.test.ts  db.ts  index.ts  instances.ts  session.test.ts  session.ts  socket.test.ts  socket.ts
apps/filebrowser/: README.md  index.html  package.json  vite.config.ts
apps/filebrowser-server/: package.json
apps/filebrowser-server/src/: index.ts  seed.test.ts  seed.ts
apps/filebrowser/src/: App.tsx
apps/imagegen/: package.json
apps/notes/: README.md  index.html  package.json  vite.config.ts
apps/notes/src/: App.tsx  index.tsx
apps/playground/: README.md  index.html  package.json
apps/playground/src/: App.tsx  examples.ts  index.css  opcodes.ts  runtime.ts
apps/server/: README.md  package.json
apps/server/src/: index.ts
apps/tui/: README.md  package.json
apps/tui/src/: App.tsx
apps/web/: README.md  index.html  package.json
apps/web/src/: App.tsx  index.css
crates/apps/filebrowser-server/: Cargo.toml
crates/apps/filebrowser-server/src/: main.rs
crates/apps/filebrowser-server/tests/: integration.rs
crates/apps/notes-server/: Cargo.toml
crates/apps/notes-server/src/: main.rs
crates/apps/notes-server/tests/: integration.rs
crates/bloom-core/: Cargo.toml
crates/bloom-core/src/: storage.rs
crates/bloom-ir/: Cargo.toml  opcodes.toml
crates/bloom-plugin-abi/: Cargo.toml
crates/bloom-runtime/: Cargo.toml
crates/bloom-runtime/src/: lib.rs  plugin_loader.rs
crates/lotus-cli/: Cargo.toml
crates/lotus-cli/src/: main.rs
crates/lotus-cli/tests/: integration.rs
crates/lotus-core/: Cargo.toml
crates/lotus-core/src/: capability.rs  entity.rs  lib.rs  scheduler.rs  seed.rs  storage.rs
crates/lotus-core/src/storage/: tests.rs
crates/lotus-ir/: Cargo.toml  opcodes.toml
crates/lotus-ir/src/: builders.rs  lib.rs  opcodes.rs  schema.rs  sexpr.rs  tests.rs  validation.rs
crates/lotus-plugin-abi/: Cargo.toml
crates/lotus-runtime/: Cargo.toml
crates/lotus-runtime/src/: context.rs  kernel.rs  lib.rs  opcodes.rs  plugin_loader.rs  plugin_registry.rs
crates/lotus-runtime/tests/: adversarial.rs  capabilities.rs  capability_delegation.rs  complex_workflows.rs  edge_cases.rs  fs_integration.rs  gameloop.rs  integration.rs  multi_entity.rs  object_creation.rs  procgen_integration.rs  scheduler_integration.rs  update_persistence.rs  verb_calling.rs
crates/plugins/ai/: Cargo.toml  opcodes.toml
crates/plugins/ai/src/: lib.rs
crates/plugins/cloud/: Cargo.toml
crates/plugins/cloud/src/: lib.rs
crates/plugins/diffusers/: Cargo.toml  opcodes.toml
crates/plugins/diffusers/src/: lib.rs
crates/plugins/fs/: Cargo.toml  (+1 more)
crates/plugins/memory/: Cargo.toml  opcodes.toml
crates/plugins/memory/src/: lib.rs
crates/plugins/net/: Cargo.toml  opcodes.toml
crates/plugins/net/src/: lib.rs
crates/plugins/sqlite/: Cargo.toml  opcodes.toml
crates/plugins/sqlite/src/: lib.rs
crates/plugins/vector/: Cargo.toml  opcodes.toml
crates/plugins/vector/src/: lib.rs
crates/syntax/typescript/: Cargo.toml
crates/syntax/typescript/src/: entity_definition.rs  lib.rs  tests.rs  transpiler.rs
crates/transport/websocket-jsonrpc/: Cargo.toml
crates/transport/websocket-jsonrpc/src/: lib.rs  server.rs  session.rs
crates/viwo-core/: Cargo.toml
crates/viwo-core/src/: capability.rs  entity.rs  lib.rs  scheduler.rs  seed.rs  storage.rs
crates/viwo-core/src/storage/: tests.rs
crates/viwo-runtime/: Cargo.toml
crates/viwo-runtime/src/: capability_validation.rs  context.rs  kernel.rs  lib.rs  opcodes.rs  plugin_loader.rs  plugin_registry.rs
crates/viwo-runtime/tests/: adversarial.rs  capabilities.rs  capability_delegation.rs  complex_workflows.rs  fs_integration.rs  gameloop.rs  integration.rs  multi_entity.rs  object_creation.rs  procgen_integration.rs  scheduler_integration.rs  verb_calling.rs
docs/: README.md  TODO.md  architecture.md  automation.md  challenges.md  codebase_map.md  codegen.md  decompiler.md  design.md  development.md  execution_model.md  index.md  package.json  quality.md  roadmap_safe_coding.md  scheduler.md  scripting_spec.md  security_investigation.md  transpiler.md  tui.md  vision.md
docs/.vitepress/: config.mts
docs/apps/: admin-cli.md  cli.md  discord-bot.md  filebrowser-server.md  filebrowser.md  imagegen.md  imagegen_roadmap.md  notes-server.md  notes.md  playground.md  server.md  tui.md  web.md
docs/components/: tui.md  web-editor.md  web_frontend.md
docs/core/: architecture.md  capabilities_guide.md  codebase_map.md  scheduler.md  security.md  seeds.md
docs/design/: rust-port.md
docs/plugins/: ai.md  development.md  diffusers.md  fs.md  memory.md  net.md  procgen.md  sqlite.md  vector.md
docs/reference/: api.md  client.md  shared.md
docs/scripting/: compiler.md  decompiler.md  interpreter.md  spec.md  transpiler.md
ops/format/: package.json
ops/lint/: package.json
ops/opcodes/: package.json
ops/readmes/: package.json
ops/test/: package.json
ops/types/: package.json
ops/unused/: package.json
plugins/: README.md
plugins/ai/: README.md  package.json
plugins/diffusers/server/: controlnet.py  main.py  pyproject.toml
plugins/fs/: package.json
plugins/memory/: tsconfig.json
plugins/net/: package.json
plugins/vector/: package.json
scratch/: capability_prototype.ts  test_this_context.ts  verify_hydration.ts  verify_phase_1.ts
scratch/vec_test/: README.md  index.ts  package.json
scripts/: check-opcodes.ts  check-readmes.ts  dev-docs.ts  pre-commit  test-hotel-stages.ts  verify-plugin.ts
seeds/definitions/: ChatTree.ts  Golem.ts  Hotel.ts  Items.ts  Player.ts  Quest.ts  System.ts
(+97 files in other folders)
