[workspace]
resolver = "2"
default-members = ["crates/viwo-cli"]
members = [
    "crates/viwo-ir",
    "crates/viwo-core",
    "crates/viwo-runtime",
    "crates/viwo-plugin-abi",
    "crates/viwo-cli",
    "crates/syntax/typescript",
    "crates/runtime/luajit",
    "crates/transport/websocket-jsonrpc",
    "crates/plugins/procgen",
    "crates/plugins/fs",
    "crates/plugins/sqlite",
    "crates/plugins/net",
    "crates/plugins/ai",
    "crates/plugins/vector",
    "crates/plugins/memory",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/anthropics/viwo"

[workspace.dependencies]
# Core
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Lua runtime
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }

# TypeScript parsing
# arborium-typescript = "0.1"  # TODO: verify crate name
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"

# Serialization
capnp = "0.20"

# Plugin system
abi_stable = "0.11"
libloading = "0.8"

# Workspace crates
viwo-ir = { path = "crates/viwo-ir" }
viwo-core = { path = "crates/viwo-core" }
viwo-runtime = { path = "crates/viwo-runtime" }
viwo-plugin-abi = { path = "crates/viwo-plugin-abi" }
viwo-transport-websocket-jsonrpc = { path = "crates/transport/websocket-jsonrpc" }
viwo-syntax-typescript = { path = "crates/syntax/typescript" }
viwo-runtime-luajit = { path = "crates/runtime/luajit" }

# Minimize debug build size
[profile.dev]
debug = 0
split-debuginfo = "unpacked"

# Speed up proc-macro and build-script builds
[profile.dev.build-override]
opt-level = 3

# Optimize release builds
[profile.release]
lto = true
codegen-units = 1
strip = true
