[package]
name = "bloom-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integrated runtime combining storage and script execution"

[dependencies]
bloom-core.workspace = true
bloom-ir.workspace = true
bloom-runtime-luajit.workspace = true
bloom-plugin-ai = { path = "../plugins/ai" }
bloom-plugin-memory = { path = "../plugins/memory" }
bloom-plugin-net = { path = "../plugins/net" }
bloom-plugin-sqlite = { path = "../plugins/sqlite" }
bloom-plugin-vector = { path = "../plugins/vector" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["sync", "rt"] }
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }
thiserror.workspace = true
libloading = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"
