[package]
name = "lotus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Lotus runtime"

[[bin]]
name = "lotus"
path = "src/main.rs"

[dependencies]
lotus-core.workspace = true
lotus-ir.workspace = true
lotus-runtime.workspace = true
lotus-transport-websocket-jsonrpc.workspace = true
lotus-syntax-typescript.workspace = true
lotus-runtime-luajit.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
