[package]
name = "rhizome-lotus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Lotus runtime"

[[bin]]
name = "lotus"
path = "src/main.rs"

[dependencies]
rhizome-lotus-core.workspace = true
rhizome-lotus-ir.workspace = true
rhizome-lotus-runtime.workspace = true
rhizome-lotus-transport-websocket-jsonrpc.workspace = true
rhizome-lotus-syntax-typescript.workspace = true
rhizome-lotus-runtime-luajit.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
