[package]
name = "rhizome-lotus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Entity system, capabilities, and storage for Lotus"

[dependencies]
rhizome-lotus-ir.workspace = true
rhizome-lotus-syntax-typescript.workspace = true
serde.workspace = true
serde_json.workspace = true
libsql.workspace = true
thiserror.workspace = true
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
