[package]
name = "lotus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integrated runtime combining storage and script execution"

[dependencies]
lotus-core.workspace = true
lotus-ir.workspace = true
lotus-runtime-luajit.workspace = true
lotus-plugin-ai = { path = "../plugins/ai" }
lotus-plugin-memory = { path = "../plugins/memory" }
lotus-plugin-net = { path = "../plugins/net" }
lotus-plugin-sqlite = { path = "../plugins/sqlite" }
lotus-plugin-vector = { path = "../plugins/vector" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["sync", "rt"] }
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }
thiserror.workspace = true
libloading = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"
