[package]
name = "rhizome-lotus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integrated runtime combining storage and script execution"

[dependencies]
rhizome-lotus-core.workspace = true
rhizome-lotus-ir.workspace = true
rhizome-lotus-runtime-luajit.workspace = true
rhizome-lotus-plugin-ai = { path = "../plugins/ai" }
rhizome-lotus-plugin-memory = { path = "../plugins/memory" }
rhizome-lotus-plugin-net = { path = "../plugins/net" }
rhizome-lotus-plugin-sqlite = { path = "../plugins/sqlite" }
rhizome-lotus-plugin-vector = { path = "../plugins/vector" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["sync", "rt"] }
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }
thiserror.workspace = true
libloading = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"
