[package]
name = "viwo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Entity system, capabilities, and storage for Viwo"

[dependencies]
viwo-ir.workspace = true
viwo-syntax-typescript.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
