[package]
name = "viwo-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integrated runtime combining storage and script execution"

[dependencies]
viwo-core.workspace = true
viwo-ir.workspace = true
viwo-runtime-luajit.workspace = true
viwo-plugin-fs = { path = "../plugins/fs" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["sync"] }
mlua = { version = "0.10", features = ["luajit", "serialize"] }
thiserror.workspace = true
libloading = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"
