[package]
name = "viwo-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integrated runtime combining storage and script execution"

[dependencies]
viwo-core.workspace = true
viwo-ir.workspace = true
viwo-runtime-luajit.workspace = true
viwo-plugin-ai = { path = "../plugins/ai" }
viwo-plugin-fs = { path = "../plugins/fs" }
viwo-plugin-memory = { path = "../plugins/memory" }
viwo-plugin-net = { path = "../plugins/net" }
viwo-plugin-sqlite = { path = "../plugins/sqlite" }
viwo-plugin-vector = { path = "../plugins/vector" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["sync", "rt"] }
mlua = { version = "0.10", features = ["luajit", "serialize"] }
thiserror.workspace = true
libloading = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"
