[package]
name = "lotus-notes-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wiki-style notes server with wikilinks and backlinks"

[[bin]]
name = "notes-server"
path = "src/main.rs"

[dependencies]
lotus-core.workspace = true
lotus-runtime = { path = "../../lotus-runtime" }
lotus-transport-websocket-jsonrpc = { path = "../../transport/websocket-jsonrpc" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
futures-util.workspace = true
lotus-ir.workspace = true
