[package]
name = "bloom-plugin-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
rig-core = "0.3"
tokio = { version = "1", features = ["full"] }
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }

[dev-dependencies]
tokio-test = "0.4"
