[package]
name = "viwo-plugin-diffusers"
version = "0.1.0"
edition = "2021"
description = "Diffusers plugin for Viwo - Stable Diffusion image generation using burn-models"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wgpu"]
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]
cpu = ["burn-ndarray"]

[dependencies]
serde_json = "1.0"
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }
thiserror = "2.0"
image = "0.25"

# Burn framework backends
burn = "0.20.0-pre.6"
burn-wgpu = { version = "0.20.0-pre.6", optional = true }
burn-cuda = { version = "0.20.0-pre.6", optional = true }
burn-ndarray = { version = "0.20.0-pre.6", optional = true }

# burn-models from local path
burn-models = { path = "/home/me/git/burn-models/crates/burn-models" }
burn-models-clip = { path = "/home/me/git/burn-models/crates/burn-models-clip" }
burn-models-convert = { path = "/home/me/git/burn-models/crates/burn-models-convert" }
burn-models-unet = { path = "/home/me/git/burn-models/crates/burn-models-unet" }
burn-models-vae = { path = "/home/me/git/burn-models/crates/burn-models-vae" }
burn-models-samplers = { path = "/home/me/git/burn-models/crates/burn-models-samplers" }
