[package]
name = "rhizome-lotus-plugin-diffusers"
version = "0.1.0"
edition = "2021"
description = "Diffusers plugin for Lotus - Stable Diffusion image generation using burn-models"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wgpu"]
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]
cpu = ["burn-ndarray"]

[dependencies]
serde_json = "1.0"
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }
thiserror = "2.0"
image = "0.25"

# Burn framework backends
burn = "0.20.0-pre.6"
burn-wgpu = { version = "0.20.0-pre.6", optional = true }
burn-cuda = { version = "0.20.0-pre.6", optional = true }
burn-ndarray = { version = "0.20.0-pre.6", optional = true }

# burn-models for Stable Diffusion
burn-models = { git = "https://github.com/pterror/burn-models" }
burn-models-clip = { git = "https://github.com/pterror/burn-models" }
burn-models-convert = { git = "https://github.com/pterror/burn-models" }
burn-models-unet = { git = "https://github.com/pterror/burn-models" }
burn-models-vae = { git = "https://github.com/pterror/burn-models" }
burn-models-samplers = { git = "https://github.com/pterror/burn-models" }
