[package]
name = "viwo-plugin-memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0"
rusqlite = "0.32"
tokio = { version = "1", features = ["full"] }

# Internal dependencies
viwo-plugin-ai = { path = "../ai" }
viwo-plugin-vector = { path = "../vector" }
viwo-plugin-sqlite = { path = "../sqlite" }
