[package]
name = "rhizome-lotus-plugin-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
# Using system sqlite to avoid conflict with libsql's bundled sqlite
rusqlite = { version = "0.37" }
mlua = { version = "0.10", features = ["luajit52", "vendored", "serialize"] }

[dev-dependencies]
tempfile = "3.8"
