[package]
name = "viwo-plugin-vector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
mlua = { version = "0.10", features = ["luajit", "serialize"] }

[dev-dependencies]
tempfile = "3.8"
