[package]
name = "bloom-syntax-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TypeScript to S-expression transpiler for Bloom"

[dependencies]
bloom-ir.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
