[package]
name = "bloom-transport-websocket-jsonrpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket JSON-RPC transport for Bloom"

[dependencies]
bloom-core.workspace = true
bloom-ir.workspace = true
bloom-plugin-abi.workspace = true
bloom-runtime = { path = "../../bloom-runtime" }
bloom-runtime-luajit.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading.workspace = true
thiserror.workspace = true
tracing.workspace = true
