[package]
name = "lotus-transport-websocket-jsonrpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket JSON-RPC transport for Lotus"

[dependencies]
lotus-core.workspace = true
lotus-ir.workspace = true
lotus-plugin-abi.workspace = true
lotus-runtime = { path = "../../lotus-runtime" }
lotus-runtime-luajit.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading.workspace = true
thiserror.workspace = true
tracing.workspace = true
