[package]
name = "rhizome-lotus-transport-websocket-jsonrpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket JSON-RPC transport for Lotus"

[dependencies]
rhizome-lotus-core.workspace = true
rhizome-lotus-ir.workspace = true
rhizome-lotus-plugin-abi.workspace = true
rhizome-lotus-runtime = { path = "../../lotus-runtime" }
rhizome-lotus-runtime-luajit.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
libloading.workspace = true
thiserror.workspace = true
tracing.workspace = true
